--- a/PreperationServices/PreperationNotes.ipynb
+++ b/PreperationServices/PreperationNotes.ipynb
@@ -46,7 +46,7 @@
    ],
    "source": [
     "IngestionService = DataIngestionService()\n",
-    "dataset = IngestionService.ingestAsPandas(\"../Data/handwritten/A_Z Handwritten Data.csv\")"
+    "dataset = IngestionService.ingestAsPandas(\"../Data/handwritten/A_Z Handwritten Data.csv\")\n"
    ],
    "metadata": {
     "collapsed": false,
